Bug 1173195 - Don't assert success until successful in GMPSharedMemManager. r=edwin